align fixes part 1

--- a/main.css
+++ b/main.css
@@ -96,6 +96,7 @@ section.specs {
     float: right;
     margin-right: 50vh;
     padding: 0;
+    align-items: flex-end;
     margin-top: 125px;
     vertical-align: top;
     display: inline-block;
@@ -104,6 +105,7 @@ section.specs {
 
 section.software {
     float: right;
+    align-items: flex-end;
     margin-right: 50vh;
     padding: 0;
     margin-top: 125px;
@@ -113,6 +115,7 @@ section.software {
 
 section.acess {
     float: left;
+    align-items: flex-end;
     margin-left: 50vh;
     padding: 0;
     margin-top: -300px;
@@ -189,7 +192,6 @@ section.acess {
 /* Emoji 2 (Specs)) */
 
 .emj2 {
-
     margin-bottom: -5px;
     height: 32px;
     width: 32px;
